ola-parser/src/testdata/syntaxTests/metaTypes/typeNotRegularIdentifierFunction.sol
contract Test {
    fn type()  {
    }
}
// ----
// ParserError 2314: (29-33): Expected identifier but got 'type'
